<resources>
    <string name="app_name">TerraTechnica</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">250108105459152</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event__description">Event_Description</string>
    <string name="title_activity_instagram">Instagram</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_us">Manifesting the opportunities of technology and innovation, and prioritising the need to extend the same, the National Institute of Technology Delhi inherently presents its first technical festival, the TerraTechnica’17. Conveying the sole motivation of continuous and cumulative importance of technology and its attributes in the developing scenario of the nation, TerraTechnica’17 tends to strengthen the role of engineering applications and its utilisation. The fest renders the bright minds of the country an opportunistic potential to evolve their technical skills, combined with the notion of emerging at the pole position in the competitive environments. It enunciates itself as the learning grounds for proper conceptual vision, developmental ideas, establishing a foreground for technical and engineering applications, and their achievability. In addition, TerraTechnica’17 also prioritises the absolute growth of the visual modality of the participants to intensify the scope of nurturing. An inspiration amalgamating with the spark of an idea embarks the incept</string>
    <string name="soon">Coming soon!!</string>
    <string name="nitd">NIT Delhi</string>
    <string name="address">A-7, Institutional Area, Near Satyawadi Raja Harish Chandra Hospital, Narela, Delhi, 110040</string>
    <string name="locate_us">Locate Us</string>
    <string name="faq">FAQ</string>
    <string name="sponsor">Sponsor</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_sdad">sdad</string>
</resources>
